add: header, primary block

--- a/app/index.html
+++ b/app/index.html
@@ -4,10 +4,40 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>gulp-start</title>
   <link rel="stylesheet" href="css/style.min.css">
+  <title>Лазерная резка</title>
 </head>
 <body>
+  <header class="header">
+    <div class="wrapper">
+      <div class="logo">
+        <img src="#" alt="logo" class="logo__img">
+      </div>
+      <nav class="nav">
+        <ul class="list">
+          <li class="list__item"><a href="#" class="list__link">О производстве</a></li>
+          <li class="list__item"><a href="#" class="list__link">Услуги</a></li>
+          <li class="list__item"><a href="#" class="list__link">Контакты</a></li>
+        </ul>
+      </nav>
+      <div class="contacts">
+        <a href="#" class="contacts__tel">8 999 999 99 99</a>
+        <a href="#" class="contacts__mail">mail@mail.ru</a>
+      </div>
+    </div>
+  </header>
+  <main class="main">
+    <section class="primary">
+      <img class="primary__img" src="./assets/images/primary-img.jpg" alt="лазерная резка фон">
+      <div class="wrapper">
+        <div class="content">
+          <h1 class="content__title">Лазерная резка металла в Ижевске</h1>
+          <p class="content__subtitle">Литейное производство стали и чугунаМеханическая и термическая обработка металлаПроизводство металлических конструкций любой сложности</p>
+          <button class="content__button">оставить заявку</button>
+        </div>
+      </div>
+    </section>
+  </main>
   <script src="js/main.min.js"></script>
 </body>
 </html>
