--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@
   <header class="header">
     <div class="wrapper">
       <div class="logo">
-        <img src="#" alt="logo" class="logo__img">
+        <img src="./assets/images/logo1.png" alt="logo" class="logo__img">
       </div>
       <nav class="nav">
         <ul class="list">
@@ -21,19 +21,19 @@
         </ul>
       </nav>
       <div class="contacts">
-        <a href="#" class="contacts__tel">8 999 999 99 99</a>
-        <a href="#" class="contacts__mail">mail@mail.ru</a>
+        <a href="#" class="contacts__link contacts__link--tel">8 999 999 99 99</a>
+        <a href="#" class="contacts__link contacts__link--mail">mail@mail.ru</a>
       </div>
     </div>
   </header>
   <main class="main">
     <section class="primary">
-      <img class="primary__img" src="./assets/images/primary-img.jpg" alt="лазерная резка фон">
+      <img class="primary__img" src="./assets/images/primary-img-filter.jpg" alt="лазерная резка фон">
       <div class="wrapper">
         <div class="content">
           <h1 class="content__title">Лазерная резка металла в Ижевске</h1>
           <p class="content__subtitle">Литейное производство стали и чугунаМеханическая и термическая обработка металлаПроизводство металлических конструкций любой сложности</p>
-          <button class="content__button">оставить заявку</button>
+          <button class="content__button">оставить заявку2</button>
         </div>
       </div>
     </section>
