--- a/app/index.html
+++ b/app/index.html
@@ -24,6 +24,13 @@
         <a href="#" class="contacts__link contacts__link--tel">8 999 999 99 99</a>
         <a href="#" class="contacts__link contacts__link--mail">mail@mail.ru</a>
       </div>
+      <div class="burger">
+        <svg class="burger-btn" width="25" height="20" viewBox="0 0 25 16" xmlns="http://www.w3.org/2000/svg">
+          <rect class="burger-btn--1" width="25" height="2" rx="1" ry="1" />
+          <rect class="burger-btn--2" width="25" height="2" y="7" rx="1" ry="1" />
+          <rect class="burger-btn--3" width="25" height="2" y="14" rx="1" ry="1" />
+        </svg>
+      </div>
     </div>
   </header>
   <main class="main">
@@ -32,8 +39,8 @@
       <div class="wrapper">
         <div class="content">
           <h1 class="content__title">Лазерная резка металла в Ижевске</h1>
-          <p class="content__subtitle">Литейное производство стали и чугунаМеханическая и термическая обработка металлаПроизводство металлических конструкций любой сложности</p>
-          <button class="content__button">оставить заявку2</button>
+          <p class="content__subtitle">Литейное производство стали и чугуна Механическая и термическая обработка металла Производство металлических конструкций любой сложности</p>
+          <button class="content__button">оставить заявку</button>
         </div>
       </div>
     </section>
