--- a/app/index.html
+++ b/app/index.html
@@ -44,6 +44,43 @@
         </div>
       </div>
     </section>
+    <section class="choose-us">
+      <div class="wrapper">
+        <div class="block-desc">
+          <div class="block-img">
+            <img src="./assets/images/choose-us.png" alt="деталь" class="block-img__img">
+          </div>
+          <div class="desc">
+            <h2 class="desc__title">Почему выбирают нас</h2>
+            <p class="desc__text">Наше производство находится в г. Ижевске. Ежегодно наше предприятие реализует многочисленное количество заказов, удовлетворяющих требованиям клиентов.<br>
+            Среди нашей продукции найдется всё, что необходимо.</p>
+          </div>
+        </div>
+        <div class="advantages">
+          <div class="advantage">
+            <div class="icon-box">
+              <img class="icon-box__icon" src="./assets/images/icons/podhod.png" alt="индивидуальный подход">
+            </div>
+            <h3 class="advantage__title">Индивидуальный подход</h3>
+            <p class="advantage__desc">Мы создаём проекты любой сложности и объёма по индивидуальному заказу, по схемам, техническому заданию</p>
+          </div>
+          <div class="advantage">
+            <div class="icon-box">
+              <img class="icon-box__icon" src="./assets/images/icons/kachestvo.png" alt="гарантия качества">
+            </div>
+            <h3 class="advantage__title">Гарантия качества</h3>
+            <p class="advantage__desc">Мы гарантируем повышенную износостойкость и долговечность выпускаемой продукции</p>
+          </div>
+          <div class="advantage">
+            <div class="icon-box">
+              <img class="icon-box__icon" src="./assets/images/icons/proizvodstvo.png" alt="производство">
+            </div>
+            <h3 class="advantage__title">Производство</h3>
+            <p class="advantage__desc">У нас есть собственная производственная площадка с высокотехнологичным оборудованием</p>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
   <script src="js/main.min.js"></script>
 </body>
