--- a/app/index.html
+++ b/app/index.html
@@ -81,6 +81,61 @@
         </div>
       </div>
     </section>
+    <section class="services">
+      <div class="wrapper">
+        <h2 class="services__title">Основные виды услуг</h2>
+        <div class="service-container">
+          <div class="service">
+            <div class="number-box">
+              <span class="number-box__number">1</span>
+            </div>
+            <p class="service__desc">Обработка деталей на токарном, фрезерном, шлифовальном, расточном и зубонарезном оборудовании</p>
+          </div>
+          <div class="service">
+            <div class="number-box">
+              <span class="number-box__number">2</span>
+            </div>
+            <p class="service__desc">Термическая обработка металлов (закалка, отжиг, установка ТВЧ), холодная штамповка</p>
+          </div>
+          <div class="service">
+            <div class="number-box">
+              <span class="number-box__number">3</span>
+            </div>
+            <p class="service__desc">Разработка, проектирование, производство с/х техники, запасных частей, в т.ч. к импортному с/х оборудованию</p>
+          </div>
+          <div class="service">
+            <div class="number-box">
+              <span class="number-box__number">4</span>
+            </div>
+            <p class="service__desc">Производство металлических конструкций любой сложности</p>
+          </div>
+          <div class="service">
+            <div class="number-box">
+              <span class="number-box__number">5</span>
+            </div>
+            <p class="service__desc"></p>
+          </div>
+          <div class="service">
+            <div class="number-box">
+              <span class="number-box__number">6</span>
+            </div>
+            <p class="service__desc"></p>
+          </div>
+          <div class="service">
+            <div class="number-box">
+              <span class="number-box__number">7</span>
+            </div>
+            <p class="service__desc"></p>
+          </div>
+          <div class="service">
+            <div class="number-box">
+              <span class="number-box__number">8</span>
+            </div>
+            <p class="service__desc"></p>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
   <script src="js/main.min.js"></script>
 </body>
