--- a/index.html
+++ b/index.html
@@ -173,6 +173,9 @@
         </div>
       </div>
     </section>
+    <section class="tabs">
+      
+    </section>
   </main>
   <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
   <script src="js/main.min.js"></script>
