fix: production logic

--- a/app/index.html
+++ b/app/index.html
@@ -178,16 +178,16 @@
         <h2 class="production__title">О производстве</h2>
         <div class="production__tabs tabs">
           <div class="tabs__head">
-            <h3 class="tabs__title" data-tab="lazer">Лазерная резка</h3>
+            <h3 class="tabs__title tabs__title--active" data-tab="lazer">Лазерная резка</h3>
             <h3 class="tabs__title" data-tab="tokarnie">Токарно фрезерные работы</h3>
             <h3 class="tabs__title" data-tab="gibka">Гибка металла</h3>
             <h3 class="tabs__title" data-tab="svarka">Сварочные работы</h3>
           </div>
           <div class="tabs__body">
             <div class="tabs__content" data-tab="lazer">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis temporibus iure explicabo aspernatur voluptatem, corrupti nulla consequuntur eius omnis blanditiis. Magnam ullam accusantium dolorem nihil cupiditate autem magni ipsam blanditiis.</div>
-            <div class="tabs__content" data-tab="tokarnie">Lorem, ipsum dolor sit amet consectetur adipisicing elit. At sit aliquam aut iure in ea, minima esse id! Odio quidem recusandae iste nobis facere officia sit! Debitis dicta laboriosam odio.</div>
-            <div class="tabs__content" data-tab="gibka">Lorem, ipsum dolor sit amet consectetur adipisicing elit. At sit aliquam aut iure in ea, minima esse id! Odio quidem recusandae iste nobis facere officia sit! Debitis dicta laboriosam odio.</div>
-            <div class="tabs__content" data-tab="svarka">Lorem, ipsum dolor sit amet consectetur adipisicing elit. At sit aliquam aut iure in ea, minima esse id! Odio quidem recusandae iste nobis facere officia sit! Debitis dicta laboriosam odio.</div>
+            <div class="tabs__content" data-tab="tokarnie">No Lorem, ipsum dolor sit amet consectetur adipisicing elit. At sit aliquam aut iure in ea, minima esse id! Odio quidem recusandae iste nobis facere officia sit! Debitis dicta laboriosam odio.</div>
+            <div class="tabs__content" data-tab="gibka">Yes Lorem, ipsum dolor sit amet consectetur adipisicing elit. At sit aliquam aut iure in ea, minima esse id! Odio quidem recusandae iste nobis facere officia sit! Debitis dicta laboriosam odio.</div>
+            <div class="tabs__content" data-tab="svarka">True Lorem, ipsum dolor sit amet consectetur adipisicing elit. At sit aliquam aut iure in ea, minima esse id! Odio quidem recusandae iste nobis facere officia sit! Debitis dicta laboriosam odio.</div>
           </div>
         </div>
       </div>
