--- a/app/index.html
+++ b/app/index.html
@@ -183,6 +183,12 @@
             <h3 class="tabs__title" data-tab="gibka">Гибка металла</h3>
             <h3 class="tabs__title" data-tab="svarka">Сварочные работы</h3>
           </div>
+          <!-- <select class="tabs__head">
+            <option class="tabs__title tabs__title--active" data-tab="lazer">Лазерная резка</option>
+            <option class="tabs__title" data-tab="tokarnie">Токарно фрезерные работы</option>
+            <option class="tabs__title" data-tab="gibka">Гибка металла</option>
+            <option class="tabs__title" data-tab="svarka">Сварочные работы</option>
+          </select> -->
           <div class="tabs__body">
             <div class="tabs__content" data-tab="lazer">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis temporibus iure explicabo aspernatur voluptatem, corrupti nulla consequuntur eius omnis blanditiis. Magnam ullam accusantium dolorem nihil cupiditate autem magni ipsam blanditiis.</div>
             <div class="tabs__content" data-tab="tokarnie">No Lorem, ipsum dolor sit amet consectetur adipisicing elit. At sit aliquam aut iure in ea, minima esse id! Odio quidem recusandae iste nobis facere officia sit! Debitis dicta laboriosam odio.</div>
