fix: production conten

--- a/app/index.html
+++ b/app/index.html
@@ -183,14 +183,38 @@
             <h3 class="tabs__title" data-tab="gibka">Гибка металла</h3>
             <h3 class="tabs__title" data-tab="svarka">Сварочные работы</h3>
           </div>
-          <!-- <select class="tabs__head">
-            <option class="tabs__title tabs__title--active" data-tab="lazer">Лазерная резка</option>
-            <option class="tabs__title" data-tab="tokarnie">Токарно фрезерные работы</option>
-            <option class="tabs__title" data-tab="gibka">Гибка металла</option>
-            <option class="tabs__title" data-tab="svarka">Сварочные работы</option>
-          </select> -->
           <div class="tabs__body">
-            <div class="tabs__content" data-tab="lazer">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis temporibus iure explicabo aspernatur voluptatem, corrupti nulla consequuntur eius omnis blanditiis. Magnam ullam accusantium dolorem nihil cupiditate autem magni ipsam blanditiis.</div>
+            <div class="tabs__content content" data-tab="lazer">
+              <div class="wrap">
+                <div class="content__logo logo">
+                  <img class="logo__img" src="./assets/images/lazer-rezka-600.png" alt="лазерная резка продукция">
+                </div>
+                <div class="conten__desc desc">
+                  <h2 class="desc__title">Лазерная Резка</h2>
+                  <div class="desc__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi enim veniam recusandae velit ex et deserunt officiis voluptas dolorum ducimus, iusto placeat id, voluptate pariatur similique unde nobis. Quo, eaque!</div>
+                </div>
+              </div>
+              <div class="blocks-info">
+                <div class="block">
+                  <div class="number-box">
+                    <span class="number-box__number">1</span>
+                  </div>
+                  <p class="block__desc">Обработка деталей на токарном, фрезерном, шлифовальном, расточном и зубонарезном оборудовании</p>
+                </div>
+                <div class="block">
+                  <div class="number-box">
+                    <span class="number-box__number">2</span>
+                  </div>
+                  <p class="block__desc">Обработка деталей на токарном, фрезерном, шлифовальном, расточном и зубонарезном оборудовании</p>
+                </div>
+                <div class="block">
+                  <div class="number-box">
+                    <span class="number-box__number">3 </span>
+                  </div>
+                  <p class="block__desc">Обработка деталей на токарном, фрезерном, шлифовальном, расточном и зубонарезном оборудовании</p>
+                </div>
+              </div>
+            </div>
             <div class="tabs__content" data-tab="tokarnie">No Lorem, ipsum dolor sit amet consectetur adipisicing elit. At sit aliquam aut iure in ea, minima esse id! Odio quidem recusandae iste nobis facere officia sit! Debitis dicta laboriosam odio.</div>
             <div class="tabs__content" data-tab="gibka">Yes Lorem, ipsum dolor sit amet consectetur adipisicing elit. At sit aliquam aut iure in ea, minima esse id! Odio quidem recusandae iste nobis facere officia sit! Debitis dicta laboriosam odio.</div>
             <div class="tabs__content" data-tab="svarka">True Lorem, ipsum dolor sit amet consectetur adipisicing elit. At sit aliquam aut iure in ea, minima esse id! Odio quidem recusandae iste nobis facere officia sit! Debitis dicta laboriosam odio.</div>
