--- a/app/index.html
+++ b/app/index.html
@@ -179,7 +179,7 @@
         <div class="production__tabs tabs">
           <div class="tabs__head">
             <h3 class="tabs__title tabs__title--active" data-tab="lazer">Лазерная резка</h3>
-            <h3 class="tabs__title" data-tab="tokarnie">Токарно фрезерные работы</h3>
+            <h3 class="tabs__title" data-tab="tokarnie">Токарно-фрезерные работы</h3>
             <h3 class="tabs__title" data-tab="gibka">Гибка металла</h3>
             <h3 class="tabs__title" data-tab="svarka">Сварочные работы</h3>
           </div>
@@ -194,28 +194,58 @@
                   <div class="desc__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi enim veniam recusandae velit ex et deserunt officiis voluptas dolorum ducimus, iusto placeat id, voluptate pariatur similique unde nobis. Quo, eaque!</div>
                 </div>
               </div>
-              <div class="blocks-info">
-                <div class="block">
+              <div class="infoblocks">
+                <div class="infoblock">
                   <div class="number-box">
                     <span class="number-box__number">1</span>
                   </div>
-                  <p class="block__desc">Обработка деталей на токарном, фрезерном, шлифовальном, расточном и зубонарезном оборудовании</p>
+                  <p class="infoblock__desc">Обработка деталей на токарном, фрезерном, шлифовальном, расточном и зубонарезном оборудовании</p>
                 </div>
-                <div class="block">
+                <div class="infoblock">
                   <div class="number-box">
                     <span class="number-box__number">2</span>
                   </div>
-                  <p class="block__desc">Обработка деталей на токарном, фрезерном, шлифовальном, расточном и зубонарезном оборудовании</p>
+                  <p class="infoblock__desc">Обработка деталей на токарном, фрезерном, шлифовальном, расточном и зубонарезном оборудовании</p>
                 </div>
-                <div class="block">
+                <div class="infoblock">
                   <div class="number-box">
-                    <span class="number-box__number">3 </span>
+                    <span class="number-box__number">3</span>
                   </div>
-                  <p class="block__desc">Обработка деталей на токарном, фрезерном, шлифовальном, расточном и зубонарезном оборудовании</p>
+                  <p class="infoblock__desc">Обработка деталей на токарном, фрезерном, шлифовальном, расточном и зубонарезном оборудовании</p>
                 </div>
               </div>
             </div>
-            <div class="tabs__content" data-tab="tokarnie">No Lorem, ipsum dolor sit amet consectetur adipisicing elit. At sit aliquam aut iure in ea, minima esse id! Odio quidem recusandae iste nobis facere officia sit! Debitis dicta laboriosam odio.</div>
+            <div class="tabs__content" data-tab="tokarnie">
+              <div class="wrap">
+                <div class="content__logo logo">
+                  <img class="logo__img" src="./assets/images/tokarnie.png" alt="лазерная резка продукция">
+                </div>
+                <div class="conten__desc desc">
+                  <h2 class="desc__title">Токарно-фрезерные работы</h2>
+                  <div class="desc__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi enim veniam recusandae velit ex et deserunt officiis voluptas dolorum ducimus, iusto placeat id, voluptate pariatur similique unde nobis. Quo, eaque!</div>
+                </div>
+              </div>
+              <div class="infoblocks">
+                <div class="infoblock">
+                  <div class="number-box">
+                    <span class="number-box__number">1</span>
+                  </div>
+                  <p class="infoblock__desc">Обработка деталей на токарном, фрезерном, шлифовальном, расточном и зубонарезном оборудовании</p>
+                </div>
+                <div class="infoblock">
+                  <div class="number-box">
+                    <span class="number-box__number">2</span>
+                  </div>
+                  <p class="infoblock__desc">Обработка деталей на токарном, фрезерном, шлифовальном, расточном и зубонарезном оборудовании</p>
+                </div>
+                <div class="infoblock">
+                  <div class="number-box">
+                    <span class="number-box__number">3</span>
+                  </div>
+                  <p class="infoblock__desc">Обработка деталей на токарном, фрезерном, шлифовальном, расточном и зубонарезном оборудовании</p>
+                </div>
+              </div>
+            </div>
             <div class="tabs__content" data-tab="gibka">Yes Lorem, ipsum dolor sit amet consectetur adipisicing elit. At sit aliquam aut iure in ea, minima esse id! Odio quidem recusandae iste nobis facere officia sit! Debitis dicta laboriosam odio.</div>
             <div class="tabs__content" data-tab="svarka">True Lorem, ipsum dolor sit amet consectetur adipisicing elit. At sit aliquam aut iure in ea, minima esse id! Odio quidem recusandae iste nobis facere officia sit! Debitis dicta laboriosam odio.</div>
           </div>
