--- a/app/index.html
+++ b/app/index.html
@@ -25,8 +25,14 @@
         </ul>
       </nav>
       <div class="contacts">
-        <a href="#" class="contacts__link contacts__link--tel">8 999 999 99 99</a>
-        <a href="#" class="contacts__link contacts__link--mail">mail@mail.ru</a>
+        <div class="contacts__wrap">
+          <a href="#" class="contacts__link contacts__link--tel">8 999 999 99 99</a>
+          <a href="#" class="contacts__link contacts__link--mail">mail@mail.ru</a>
+        </div>
+        <div class="contacts__icons icons">
+          <a href="#" class="icons__link"><img class="icons__img" src="./assets/images/icons/telegram.png" alt="telegram"></a>
+          <a href="#" class="icons__link"><img class="icons__img" src="./assets/images/icons/whatsapp.png" alt="whatsapp"></a>
+        </div>
       </div>
       <div class="burger">
         <svg class="burger-btn" width="25" height="20" viewBox="0 0 25 16" xmlns="http://www.w3.org/2000/svg">
