--- a/app/index.html
+++ b/app/index.html
@@ -49,7 +49,7 @@
       <div class="wrapper">
         <div class="content">
           <h1 class="content__title">Лазерная резка металла в Ижевске</h1>
-          <p class="content__subtitle">Литейное производство стали и чугуна Механическая и термическая обработка металла Производство металлических конструкций любой сложности</p>
+          <p class="content__subtitle">Профессиональная обработка металла с безупречным качеством и точностью. Мы предлагаем передовое оборудование и опытных специалистов для создания идеальных контуров и деталей вашего проекта.</p>
           <button class="content__button">оставить заявку</button>
         </div>
       </div>
@@ -62,8 +62,7 @@
           </div>
           <div class="desc">
             <h2 class="desc__title">Почему выбирают нас</h2>
-            <p class="desc__text">Наше производство находится в г. Ижевске. Ежегодно наше предприятие реализует многочисленное количество заказов, удовлетворяющих требованиям клиентов.<br>
-            Среди нашей продукции найдется всё, что необходимо.</p>
+            <p class="desc__text">Мы гордимся своей репутацией надежного и качественного поставщика. Обладая передовым оборудованием и опытными специалистами, мы гарантируем безупречное качество и внимание к деталям. Приоритетом для нас является высокий стандарт точности и профессионализма, что делает нас идеальным партнером для реализации вашего проекта.</p>
           </div>
         </div>
         <div class="advantages">
@@ -72,21 +71,21 @@
               <img class="icon-box__icon" src="./assets/images/icons/podhod.png" alt="индивидуальный подход">
             </div>
             <h3 class="advantage__title">Индивидуальный подход</h3>
-            <p class="advantage__desc">Мы создаём проекты любой сложности и объёма по индивидуальному заказу, по схемам, техническому заданию</p>
+            <p class="advantage__desc">Мы создаем индивидуальные проекты любой сложности и объема, основываясь на схемах и техническом задании заказчика.</p>
           </div>
           <div class="advantage">
             <div class="icon-box">
               <img class="icon-box__icon" src="./assets/images/icons/kachestvo.png" alt="гарантия качества">
             </div>
             <h3 class="advantage__title">Гарантия качества</h3>
-            <p class="advantage__desc">Мы гарантируем повышенную износостойкость и долговечность выпускаемой продукции</p>
+            <p class="advantage__desc">Мы обеспечиваем высокий уровень стандартов качества, чтобы наши изделия служили вам долгое время и удовлетворяли все ваши потребности.</p>
           </div>
           <div class="advantage">
             <div class="icon-box">
               <img class="icon-box__icon" src="./assets/images/icons/proizvodstvo.png" alt="производство">
             </div>
             <h3 class="advantage__title">Производство</h3>
-            <p class="advantage__desc">У нас есть собственная производственная площадка с высокотехнологичным оборудованием</p>
+            <p class="advantage__desc">Наш собственный производственный комплекс с передовым оборудованием обеспечивает полный контроль и высокое качество наших продуктов.</p>
           </div>
         </div>
       </div>
@@ -196,8 +195,8 @@
                   <img class="logo__img" src="./assets/images/lazer-rezka-600.png" alt="лазерная резка продукция">
                 </div>
                 <div class="conten__desc desc">
-                  <h2 class="desc__title">Лазерная Резка</h2>
-                  <div class="desc__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi enim veniam recusandae velit ex et deserunt officiis voluptas dolorum ducimus, iusto placeat id, voluptate pariatur similique unde nobis. Quo, eaque!</div>
+                  <h2 class="desc__title">Лазерная резка металла</h2>
+                  <div class="desc__text">Мы предоставляем услуги лазерной резки для различных видов металла. Наша компания специализируется на резке листового металла, профильного металлопроката и труб. Наше передовое оборудование и опытные специалисты обеспечивают точность, высокое качество и эффективность в каждом процессе резки.</div>
                 </div>
               </div>
               <div class="infoblocks">
