--- a/app/index.html
+++ b/app/index.html
@@ -218,6 +218,24 @@
                   </div>
                   <p class="infoblock__desc">Обработка деталей на токарном, фрезерном, шлифовальном, расточном и зубонарезном оборудовании</p>
                 </div>
+                <div class="infoblock">
+                  <div class="number-box">
+                    <span class="number-box__number">4</span>
+                  </div>
+                  <p class="infoblock__desc">Обработка деталей на токарном, фрезерном, шлифовальном, расточном и зубонарезном оборудовании</p>
+                </div>
+                <div class="infoblock">
+                  <div class="number-box">
+                    <span class="number-box__number">5</span>
+                  </div>
+                  <p class="infoblock__desc">Обработка деталей на токарном, фрезерном, шлифовальном, расточном и зубонарезном оборудовании</p>
+                </div>
+                <div class="infoblock">
+                  <div class="number-box">
+                    <span class="number-box__number">6</span>
+                  </div>
+                  <p class="infoblock__desc">Обработка деталей на токарном, фрезерном, шлифовальном, расточном и зубонарезном оборудовании</p>
+                </div>
               </div>
             </div>
             <div class="tabs__content" data-tab="tokarnie">
@@ -255,6 +273,18 @@
             <div class="tabs__content" data-tab="svarka">True Lorem, ipsum dolor sit amet consectetur adipisicing elit. At sit aliquam aut iure in ea, minima esse id! Odio quidem recusandae iste nobis facere officia sit! Debitis dicta laboriosam odio.</div>
           </div>
         </div>
+      </div>
+    </section>
+    <section class="request">
+      <div class="wrapper">
+        <h2 class="request__title">Оставьте заявку</h2>
+        <p class="request__subtitle">Мы свяжемся с вами, чтобы обсудить задачу, техническое задание, объёмы и стоимость работы.</p>
+        <form class="request__form form" action="#">
+          <input type="text" class="form__input" value="Имя" >
+          <input type="text" class="form__input" value="E-mail или телефон" >
+          <input type="submit" class="form__input" value="Отправить заявку" >
+        </form>
+        <p class="request__rules">Нажимая на кнопку «Отправить заявку», вы даете согласие на обработку персональных данных и соглашаетесь с политикой конфиденциальности.</p>
       </div>
     </section>
   </main>
