--- a/app/index.html
+++ b/app/index.html
@@ -280,9 +280,9 @@
         <h2 class="request__title">Оставьте заявку</h2>
         <p class="request__subtitle">Мы свяжемся с вами, чтобы обсудить задачу, техническое задание, объёмы и стоимость работы.</p>
         <form class="request__form form" action="#">
-          <input type="text" class="form__input" value="Имя" >
-          <input type="text" class="form__input" value="E-mail или телефон" >
-          <input type="submit" class="form__input" value="Отправить заявку" >
+          <input type="text" class="form__input" placeholder="Имя" >
+          <input type="text" class="form__input" placeholder="E-mail или телефон" >
+          <input type="submit" class="form__submit" value="Отправить заявку" >
         </form>
         <p class="request__rules">Нажимая на кнопку «Отправить заявку», вы даете согласие на обработку персональных данных и соглашаетесь с политикой конфиденциальности.</p>
       </div>
