--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="content">
           <h1 class="content__title">Лазерная резка металла в Ижевске</h1>
           <p class="content__subtitle">Профессиональная обработка металла с безупречным качеством и точностью. Мы предлагаем передовое оборудование и опытных специалистов для создания идеальных контуров и деталей вашего проекта.</p>
-          <button class="content__button">оставить заявку</button>
+          <button class="content__button">оставить заявку &#129094;</button>
         </div>
       </div>
     </section>
@@ -277,14 +277,16 @@
     </section>
     <section class="request">
       <div class="wrapper">
-        <h2 class="request__title">Оставьте заявку</h2>
-        <p class="request__subtitle">Мы свяжемся с вами, чтобы обсудить задачу, техническое задание, объёмы и стоимость работы.</p>
+        <div class="request__title-box title-box">
+          <h2 class="title-box__title">Оставьте заявку</h2>
+          <p class="title-box__subtitle">Мы свяжемся с вами, чтобы обсудить задачу, техническое задание, объёмы и стоимость работы.</p>
+        </div>
         <form class="request__form form" action="#">
           <input type="text" class="form__input" placeholder="Имя" >
           <input type="text" class="form__input" placeholder="E-mail или телефон" >
-          <input type="submit" class="form__submit" value="Отправить заявку" >
+          <input type="submit" class="form__submit" value="Отправить   &#129094;" >
+          <p class="request__rules">Нажимая на кнопку «Отправить заявку», вы даете согласие на обработку персональных данных и соглашаетесь с политикой конфиденциальности.</p>
         </form>
-        <p class="request__rules">Нажимая на кнопку «Отправить заявку», вы даете согласие на обработку персональных данных и соглашаетесь с политикой конфиденциальности.</p>
       </div>
     </section>
   </main>
