--- a/app/index.html
+++ b/app/index.html
@@ -26,8 +26,8 @@
       </nav>
       <div class="contacts">
         <div class="contacts__wrap">
-          <a href="#" class="contacts__link contacts__link--tel">8 999 999 99 99</a>
-          <a href="#" class="contacts__link contacts__link--mail">mail@mail.ru</a>
+          <a href="tel:+79512084892" class="contacts__link contacts__link--tel">8 951 208 48 92</a>
+          <a href="mailto:amada18@mail.ru" class="contacts__link contacts__link--mail">amada18@mail.ru</a>
         </div>
         <div class="contacts__icons icons">
           <a href="#" class="icons__link"><img class="icons__img" src="./assets/images/icons/telegram.png" alt="telegram"></a>
@@ -50,7 +50,7 @@
         <div class="content">
           <h1 class="content__title">Лазерная резка металла в Ижевске</h1>
           <p class="content__subtitle">Профессиональная обработка металла с безупречным качеством и точностью. Мы предлагаем передовое оборудование и опытных специалистов для создания идеальных контуров и деталей вашего проекта.</p>
-          <button class="content__button">оставить заявку &#129094;</button>
+          <button class="content__button">оставить заявку 🢂</button>
         </div>
       </div>
     </section>
@@ -58,7 +58,7 @@
       <div class="wrapper">
         <div class="block-desc">
           <div class="block-img">
-            <img src="./assets/images/choose-us.png" alt="деталь" class="block-img__img">
+            <img src="./assets/images/img2.png" alt="деталь" class="block-img__img">
           </div>
           <div class="desc">
             <h2 class="desc__title">Почему выбирают нас</h2>
@@ -98,49 +98,49 @@
             <div class="number-box">
               <span class="number-box__number">1</span>
             </div>
-            <p class="service__desc">Обработка деталей на токарном, фрезерном, шлифовальном, расточном и зубонарезном оборудовании</p>
+            <p class="service__desc">Лазерная резка металла</p>
           </div>
           <div class="service">
             <div class="number-box">
               <span class="number-box__number">2</span>
             </div>
-            <p class="service__desc">Термическая обработка металлов (закалка, отжиг, установка ТВЧ), холодная штамповка</p>
+            <p class="service__desc">Гибка металла</p>
           </div>
           <div class="service">
             <div class="number-box">
               <span class="number-box__number">3</span>
             </div>
-            <p class="service__desc">Разработка, проектирование, производство с/х техники, запасных частей, в т.ч. к импортному с/х оборудованию</p>
+            <p class="service__desc">Лазерная резка проката (труба, швеллер и т.п.)</p>
           </div>
           <div class="service">
             <div class="number-box">
               <span class="number-box__number">4</span>
             </div>
-            <p class="service__desc">Производство металлических конструкций любой сложности</p>
+            <p class="service__desc">Токарно - фрезерные работы</p>
           </div>
           <div class="service">
             <div class="number-box">
               <span class="number-box__number">5</span>
             </div>
-            <p class="service__desc">Сварка, сборка, дробеструйка, покраска изделий</p>
+            <p class="service__desc">Сварочные работы</p>
           </div>
           <div class="service">
             <div class="number-box">
               <span class="number-box__number">6</span>
             </div>
-            <p class="service__desc">Изготовление балок переменного сечения</p>
+            <p class="service__desc">Покрасочные работы</p>
           </div>
           <div class="service">
             <div class="number-box">
               <span class="number-box__number">7</span>
             </div>
-            <p class="service__desc">Сталелитейное и чугунолитейное производство: min вес литья 1кг, max вес литья 3 тонны</p>
+            <p class="service__desc">Долбление металла</p>
           </div>
           <div class="service">
             <div class="number-box">
               <span class="number-box__number">8</span>
             </div>
-            <p class="service__desc">Лазерная, плазменная резка металла</p>
+            <p class="service__desc">Распиловка металлических изделий</p>
           </div>
         </div>
       </div>
@@ -284,9 +284,22 @@
         <form class="request__form form" action="#">
           <input type="text" class="form__input" placeholder="Имя" >
           <input type="text" class="form__input" placeholder="E-mail или телефон" >
-          <input type="submit" class="form__submit" value="Отправить   &#129094;" >
+          <input type="submit" class="form__submit" value="Отправить   🢂" >
           <p class="request__rules">Нажимая на кнопку «Отправить заявку», вы даете согласие на обработку персональных данных и соглашаетесь с политикой конфиденциальности.</p>
         </form>
+      </div>
+    </section>
+    <section class="contacts">
+      <div class="wrapper">
+        <h2 class="contacts__title">Наши контакты</h2>
+        <div class="contacts__adress-box adress-box">
+          <h3 class="adress-box__title">Мы находимся</h3>
+          <p class="adress-box__desc">426032 г.Ижевск, Сарапульский тракт, 14</p>
+        </div>
+        <div class="contacts__contact-us contact-us">
+          <h3 class="contact-us__title">Связаться с нами</h3>
+
+        </div>
       </div>
     </section>
   </main>
