--- a/index.html
+++ b/index.html
@@ -153,18 +153,20 @@
           <div class="swiper-wrapper">
             <!-- Slides -->
             <div class="swiper-slide">
-              <img src="./assets/images/slider/slide1.jpg" alt="slide1">
+              <img src="./assets/images/slider/img1-800.png" alt="slide1">
             </div>
             <div class="swiper-slide">
-              <img src="./assets/images/slider/slide2.jpg" alt="slide2">
+              <img src="./assets/images/slider/img4-800.png" alt="slide2">
             </div>
             <div class="swiper-slide">
-              <img src="./assets/images/slider/slide3.jpg" alt="slide3">
+              <img src="./assets/images/slider/img3-800.png" alt="slide3">
             </div>
             <div class="swiper-slide">
-              <img src="./assets/images/slider/slide4.jpg" alt="slide4">
+              <img src="./assets/images/slider/img2-800.png" alt="slide4">
             </div>
-          
+            <div class="swiper-slide">
+              <img src="./assets/images/slider/img5-800.png" alt="slide5">
+            </div>
           </div>
           <!-- If we need pagination -->
           <!-- <div class="swiper-pagination"></div> -->
@@ -294,11 +296,15 @@
         <h2 class="contacts__title">Наши контакты</h2>
         <div class="contacts__adress-box adress-box">
           <h3 class="adress-box__title">Мы находимся</h3>
-          <p class="adress-box__desc">426032 г.Ижевск, Сарапульский тракт, 14</p>
+          <p class="adress-box__desc">426032, г.Ижевск, Сарапульский тракт, 14</p>
         </div>
         <div class="contacts__contact-us contact-us">
           <h3 class="contact-us__title">Связаться с нами</h3>
-
+          <div class="contact-us__wrap">
+            <a href="tel:+79512084892" class="contact-us__link">8 951 208 48 92</a>
+            <a href="tel:88007071120" class="contact-us__link">8 800 707 11 20</a>
+            <a href="mailto:amada18@mail.ru" class="contact-us__link">amada18@mail.ru</a>
+          </div>
         </div>
       </div>
     </section>
