--- a/app/index.html
+++ b/app/index.html
@@ -50,7 +50,7 @@
         <div class="content">
           <h1 class="content__title">Лазерная резка металла в Ижевске</h1>
           <p class="content__subtitle">Профессиональная обработка металла с безупречным качеством и точностью. Мы предлагаем передовое оборудование и опытных специалистов для создания идеальных контуров и деталей вашего проекта.</p>
-          <button class="content__button">оставить заявку 🢂</button>
+          <button class="content__button">оставить заявку</button>
         </div>
       </div>
     </section>
@@ -286,7 +286,7 @@
         <form class="request__form form" action="#">
           <input type="text" class="form__input" placeholder="Имя" >
           <input type="text" class="form__input" placeholder="E-mail или телефон" >
-          <input type="submit" class="form__submit" value="Отправить   🢂" >
+          <input type="submit" class="form__submit" value="Отправить" >
           <p class="request__rules">Нажимая на кнопку «Отправить заявку», вы даете согласие на обработку персональных данных и соглашаетесь с политикой конфиденциальности.</p>
         </form>
       </div>
@@ -300,6 +300,8 @@
         </div>
         <div class="contacts__contact-us contact-us">
           <h3 class="contact-us__title">Связаться с нами</h3>
+          <p class="contact-us__desc">Готовы ответить на ваши вопросы и помочь вам!<br> Не стесняйтесь обращаться к нам. Ждем ваших звонков, писем и сообщений.
+          </p>
           <div class="contact-us__wrap">
             <a href="tel:+79512084892" class="contact-us__link">8 951 208 48 92</a>
             <a href="tel:88007071120" class="contact-us__link">8 800 707 11 20</a>
@@ -309,6 +311,30 @@
       </div>
     </section>
   </main>
+  <footer class="footer">
+    <div class="wrapper">
+      <div class="footer__logo logo">
+        <img src="./assets/images/logo1.png" alt="logo" class="logo__img">
+      </div>
+      <nav class="footer__nav nav">
+        <ul class="nav__list list">
+          <li class="list__item"><a href="#" class="list__link">О производстве</a></li>
+          <li class="list__item"><a href="#" class="list__link">Услуги</a></li>
+          <li class="list__item"><a href="#" class="list__link">Контакты</a></li>
+        </ul>
+      </nav>
+      <div class="footer__contacts">
+        <div class="contacts__wrap">
+          <a href="tel:+79512084892" class="contacts__link contacts__link--tel">8 951 208 48 92</a>
+          <a href="mailto:amada18@mail.ru" class="contacts__link contacts__link--mail">amada18@mail.ru</a>
+        </div>
+        <div class="contacts__icons icons">
+          <a href="#" class="icons__link"><img class="icons__img" src="./assets/images/icons/telegram.png" alt="telegram"></a>
+          <a href="#" class="icons__link"><img class="icons__img" src="./assets/images/icons/whatsapp.png" alt="whatsapp"></a>
+        </div>
+      </div>
+    </div>
+  </footer>
   <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
   <script src="js/main.min.js"></script>
 
